:package:add header html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>OhMyFood</title>
 </head>
 <body>
-    
+
+    <!-- header -->
+
+    <header class="header">
+        <h1 class="header__h1">ohmyfood</h1>
+        <div class="header__location">
+            <i class="fas fa-map-marker-alt"></i><input id="header_location--input" type="text" placeholder="Paris,Belleville" name="searchfield">
+        </div>
+        <h2 class="header__h2" >Réservez le menu qui vous convient</h2>
+        <p class="header__p">Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
+        <a class="header__btn" href="#restaurants">Explorer nos restaurants</a>
+    </header>
+
+    <!-- header end -->
+
+    <!-- nav -->
+    <nav class="nav">
+        <h2 class="nav_h2"></h2>
+    </nav>
 </body>
 </html>
