:lipstick:add header.scss

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/css/style.css">
+    <link rel="shortcut icon" type="image/png" href="./public/img/logo/Favico.png" />
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
     <title>OhMyFood</title>
 </head>
 <body>
@@ -13,7 +15,7 @@
     <header class="header">
         <h1 class="header__h1">ohmyfood</h1>
         <div class="header__location">
-            <i class="fas fa-map-marker-alt"></i><input id="header_location--input" type="text" placeholder="Paris,Belleville" name="searchfield">
+            <i class="fas fa-map-marker-alt"></i><input class="header__location--input" type="text" placeholder="Paris,Belleville" name="searchfield">
         </div>
         <h2 class="header__h2" >Réservez le menu qui vous convient</h2>
         <p class="header__p">Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
