:package:add nav html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,30 @@
 
     <!-- nav -->
     <nav class="nav">
-        <h2 class="nav_h2"></h2>
+        <h2 class="nav__h2">Fonctionnement</h2>
+        <ul class="nav__ul">
+            <li class="nav__ul--li">
+                <span class="nav__ul--li--chiffre">
+                    1
+                </span>
+                <span class="fas fa-mobile-alt"></span>
+                Choisissez un restaurant
+            </li>
+            <li class="nav__ul--li">
+                <span class="nav__ul--li--chiffre">
+                    2
+                </span>
+                <span class="fas fa-bars"></span>
+                Composez votre menu
+            </li>
+            <li class="nav__ul--li">
+                <span class="nav__ul--li--chiffre">
+                    3
+                </span>
+                <span class="fas fa-store"></span>
+                Dégustez au restaurant
+            </li>
+        </ul>
     </nav>
 </body>
 </html>
