:lipstick:nav.scss modification

--- a/index.html
+++ b/index.html
@@ -29,21 +29,21 @@
         <h2 class="nav__h2">Fonctionnement</h2>
         <ul class="nav__ul">
             <li class="nav__ul--li">
-                <span class="nav__ul--li--chiffre">
+                <span class="nav__ul--li--figure">
                     1
                 </span>
                 <span class="fas fa-mobile-alt"></span>
                 Choisissez un restaurant
             </li>
             <li class="nav__ul--li">
-                <span class="nav__ul--li--chiffre">
+                <span class="nav__ul--li--figure">
                     2
                 </span>
-                <span class="fas fa-bars"></span>
+                <span class="fas fa-list-ul"></span>
                 Composez votre menu
             </li>
             <li class="nav__ul--li">
-                <span class="nav__ul--li--chiffre">
+                <span class="nav__ul--li--figure">
                     3
                 </span>
                 <span class="fas fa-store"></span>
