--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="shortcut icon" type="image/png" href="./public/img/logo/Favico.png" />
-    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
     <title>OhMyFood</title>
 </head>
 <body>
@@ -32,24 +33,99 @@
                 <span class="nav__ul--li--figure">
                     1
                 </span>
-                <span class="fas fa-mobile-alt"></span>
+                <span class="fas fa-mobile-alt logo"></span>
                 Choisissez un restaurant
             </li>
             <li class="nav__ul--li">
                 <span class="nav__ul--li--figure">
                     2
                 </span>
-                <span class="fas fa-list-ul"></span>
+                <span class="fas fa-list-ul logo"></span>
                 Composez votre menu
             </li>
             <li class="nav__ul--li">
                 <span class="nav__ul--li--figure">
                     3
                 </span>
-                <span class="fas fa-store"></span>
+                <span class="fas fa-store logo"></span>
                 Dégustez au restaurant
             </li>
         </ul>
     </nav>
+
+    <!-- end nav -->
+
+    <!-- article -->
+    <article class="article">
+        <h2 id="restaurants" class="article__h2">
+            Restaurants
+        </h2>
+
+        <!-- card 1-->
+        <a class="article_card" href="">
+            <figure class="article__figure">
+                <span class="article__figure--new">Nouveau</span>
+                <img class="article__figure__img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                <figcaption class="article__figcaption">
+                    <h3 class="article__figcaption__h3">La palette du goût</h3>
+                    <p class="article__figcaption__p">Ménilmontant</p>
+                    <div class="article__figcaption__like">
+                        <i class="far fa-heart empty-heart">
+                        <i class="fas fa-heart full-heart"></i></i>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+        <!--end card 1-->
+
+        <!--card 2-->
+        <a class="article_card" href="">
+            <figure class="article__figure">
+                <span class="article__figure--new">Nouveau</span>
+                <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                <figcaption class="article__figcaption">
+                    <h3 class="article__figcaption__h3">La palette du goût</h3>
+                    <p class="article__figcaption__p">Ménilmontant</p>
+                    <div class="article__figcaption__like">
+                        <i class="far fa-heart empty-heart">
+                        <i class="fas fa-heart full-heart"></i></i>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+        <!--end card 2-->
+
+        <!--card 3-->
+        <a class="article_card" href="">
+            <figure class="article__figure">
+                <img class="article__figure__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="">
+                <figcaption class="article__figcaption">
+                    <h3 class="article__figcaption__h3">La palette du goût</h3>
+                    <p class="article__figcaption__p">Ménilmontant</p>
+                    <div class="article__figcaption__like">
+                        <i class="far fa-heart empty-heart">
+                        <i class="fas fa-heart full-heart"></i></i>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+        <!--end card 3-->
+
+        <!--card 4-->
+        <a class="article_card" href="">
+            <figure class="article__figure">
+                <img class="article__figure__img" src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                <figcaption class="article__figcaption">
+                    <h3 class="article__figcaption__h3">La palette du goût</h3>
+                    <p class="article__figcaption__p">Ménilmontant</p>
+                    <div class="article__figcaption__like">
+                        <i class="far fa-heart empty-heart">
+                        <i class="fas fa-heart full-heart"></i></i>
+                    </div>
+                </figcaption>
+            </figure>
+        </a>
+        <!--end card 4-->
+    </article> 
 </body>
 </html>
