:bug:correction spninner animation

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
 
 <body>
 
-    <!--pinner-->
+    <!--spinner-->
     <div class="contenair">
+        <div class="filter"></div>
         <div class="spinner">
-            <div class="spinner_circle"></div>
+            <div class="spinner__circle"></div>
         </div>
     </div>
     <!--end spinner-->
-
+    <div class="body">
     <!-- header -->
     <header class="header">
         <h1 class="header__h1">ohmyfood</h1>
@@ -162,6 +163,7 @@
         </div>
     </footer>
     <!--end footer-->
+    </div>
 </body>
 
 </html>
