--- a/index.html
+++ b/index.html
@@ -22,147 +22,149 @@
     </div>
     <!--end spinner-->
     <div class="body">
-    <!-- header -->
-    <header class="header">
-        <h1 class="header__h1">ohmyfood</h1>
-        <div class="header__location">
-            <i class="fas fa-map-marker-alt"></i><input class="header__location--input" type="text"
-                placeholder="Paris,Belleville" name="searchfield">
-        </div>
-        <h2 class="header__h2">Réservez le menu qui vous convient</h2>
-        <p class="header__p">Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
-        <a class="header__btn" href="#restaurants">Explorer nos restaurants</a>
-    </header>
-    <!-- header end -->
+        <!-- header -->
+        <header class="header">
+            <h1 class="header__h1">ohmyfood</h1>
+            <div class="header__location">
+                <i class="fas fa-map-marker-alt"></i><input class="header__location--input" type="text"
+                    placeholder="Paris,Belleville" name="searchfield">
+            </div>
+            <h2 class="header__h2">Réservez le menu qui vous convient</h2>
+            <p class="header__p">Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
+            <a class="header__btn" href="#restaurants">Explorer nos restaurants</a>
+        </header>
+        <!-- header end -->
 
-    <!-- nav -->
-    <nav class="nav">
-        <h2 class="nav__h2">Fonctionnement</h2>
-        <ul class="nav__ul">
-            <li class="nav__ul--li">
-                <span class="nav__ul--li--figure">
-                    1
-                </span>
-                <span class="fas fa-mobile-alt logo"></span>
-                Choisissez un restaurant
-            </li>
-            <li class="nav__ul--li">
-                <span class="nav__ul--li--figure">
-                    2
-                </span>
-                <span class="fas fa-list-ul logo"></span>
-                Composez votre menu
-            </li>
-            <li class="nav__ul--li">
-                <span class="nav__ul--li--figure">
-                    3
-                </span>
-                <span class="fas fa-store logo"></span>
-                Dégustez au restaurant
-            </li>
-        </ul>
-    </nav>
-
-    <!-- end nav -->
-
-    <!-- article -->
-    <article class="article">
-        <h2 id="restaurants" class="article__h2">
-            Restaurants
-        </h2>
-
-        <!-- card 1-->
-        <a class="article_card" href="">
-            <figure class="article__figure">
-                <span class="article__figure--new">Nouveau</span>
-                <img class="article__figure__img" src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                    alt="">
-                <figcaption class="article__figcaption">
-                    <h3 class="article__figcaption__h3">La palette du goût</h3>
-                    <p class="article__figcaption__p">Ménilmontant</p>
-                    <div class="article__figcaption__like">
-                        <i class="far fa-heart empty-heart">
-                            <i class="fas fa-heart full-heart"></i></i>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-        <!--end card 1-->
-
-        <!--card 2-->
-        <a class="article_card" href="">
-            <figure class="article__figure">
-                <span class="article__figure--new">Nouveau</span>
-                <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
-                <figcaption class="article__figcaption">
-                    <h3 class="article__figcaption__h3">La note enchantée</h3>
-                    <p class="article__figcaption__p">Charonne</p>
-                    <div class="article__figcaption__like">
-                        <i class="far fa-heart empty-heart">
-                            <i class="fas fa-heart full-heart"></i></i>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-        <!--end card 2-->
-
-        <!--card 3-->
-        <a class="article_card" href="">
-            <figure class="article__figure">
-                <img class="article__figure__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                    alt="">
-                <figcaption class="article__figcaption">
-                    <h3 class="article__figcaption__h3">A la française</h3>
-                    <p class="article__figcaption__p">Cité rouge</p>
-                    <div class="article__figcaption__like">
-                        <i class="far fa-heart empty-heart">
-                            <i class="fas fa-heart full-heart"></i></i>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-        <!--end card 3-->
-
-        <!--card 4-->
-        <a class="article_card" href="">
-            <figure class="article__figure">
-                <img class="article__figure__img"
-                    src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
-                <figcaption class="article__figcaption">
-                    <h3 class="article__figcaption__h3">Le délice des sens</h3>
-                    <p class="article__figcaption__p">Folie-Méricourt</p>
-                    <div class="article__figcaption__like">
-                        <i class="far fa-heart empty-heart">
-                            <i class="fas fa-heart full-heart"></i></i>
-                    </div>
-                </figcaption>
-            </figure>
-        </a>
-        <!--end card 4-->
-    </article>
-    <!--end article -->
-
-    <!--footer-->
-    <footer class="footer">
-        <div class="container">
-            <span class="footer__logo">ohmyfood</span>
-            <ul class="footer__list">
-                <li class="footer__list-element">
-                    <a class="footer__link" href="#"><i class="footer__icon fas fa-utensils"></i>Proposer un restaurant</a>
+        <!-- nav -->
+        <nav class="nav">
+            <h2 class="nav__h2">Fonctionnement</h2>
+            <ul class="nav__ul">
+                <li class="nav__ul--li">
+                    <span class="nav__ul--li--figure">
+                        1
+                    </span>
+                    <span class="fas fa-mobile-alt logo"></span>
+                    Choisissez un restaurant
                 </li>
-                <li class="footer__list-element">
-                    <a class="footer__link" href="#"><i class="footer__icon fas fa-hands-helping"></i>Devenir partenaire</a>
+                <li class="nav__ul--li">
+                    <span class="nav__ul--li--figure">
+                        2
+                    </span>
+                    <span class="fas fa-list-ul logo"></span>
+                    Composez votre menu
                 </li>
-                <li class="footer__list-element">
-                    <a class="footer__link" href="#">Mentions légales</a>
-                </li>
-                <li class="footer__list-element">
-                    <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
+                <li class="nav__ul--li">
+                    <span class="nav__ul--li--figure">
+                        3
+                    </span>
+                    <span class="fas fa-store logo"></span>
+                    Dégustez au restaurant
                 </li>
             </ul>
-        </div>
-    </footer>
-    <!--end footer-->
+        </nav>
+
+        <!-- end nav -->
+
+        <!-- article -->
+        <article class="article">
+            <h2 id="restaurants" class="article__h2">
+                Restaurants
+            </h2>
+
+            <!-- card 1-->
+            <a class="article_card" href="./public/html/palette.html">
+                <figure class="article__figure">
+                    <span class="article__figure--new">Nouveau</span>
+                    <img class="article__figure__img"
+                        src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                    <figcaption class="article__figcaption">
+                        <h3 class="article__figcaption__h3">La palette du goût</h3>
+                        <p class="article__figcaption__p">Ménilmontant</p>
+                        <div class="article__figcaption__like">
+                            <i class="far fa-heart empty-heart">
+                                <i class="fas fa-heart full-heart"></i></i>
+                        </div>
+                    </figcaption>
+                </figure>
+            </a>
+            <!--end card 1-->
+
+            <!--card 2-->
+            <a class="article_card" href="">
+                <figure class="article__figure">
+                    <span class="article__figure--new">Nouveau</span>
+                    <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                    <figcaption class="article__figcaption">
+                        <h3 class="article__figcaption__h3">La note enchantée</h3>
+                        <p class="article__figcaption__p">Charonne</p>
+                        <div class="article__figcaption__like">
+                            <i class="far fa-heart empty-heart">
+                                <i class="fas fa-heart full-heart"></i></i>
+                        </div>
+                    </figcaption>
+                </figure>
+            </a>
+            <!--end card 2-->
+
+            <!--card 3-->
+            <a class="article_card" href="">
+                <figure class="article__figure">
+                    <img class="article__figure__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                        alt="">
+                    <figcaption class="article__figcaption">
+                        <h3 class="article__figcaption__h3">A la française</h3>
+                        <p class="article__figcaption__p">Cité rouge</p>
+                        <div class="article__figcaption__like">
+                            <i class="far fa-heart empty-heart">
+                                <i class="fas fa-heart full-heart"></i></i>
+                        </div>
+                    </figcaption>
+                </figure>
+            </a>
+            <!--end card 3-->
+
+            <!--card 4-->
+            <a class="article_card" href="">
+                <figure class="article__figure">
+                    <img class="article__figure__img"
+                        src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                    <figcaption class="article__figcaption">
+                        <h3 class="article__figcaption__h3">Le délice des sens</h3>
+                        <p class="article__figcaption__p">Folie-Méricourt</p>
+                        <div class="article__figcaption__like">
+                            <i class="far fa-heart empty-heart">
+                                <i class="fas fa-heart full-heart"></i></i>
+                        </div>
+                    </figcaption>
+                </figure>
+            </a>
+            <!--end card 4-->
+        </article>
+        <!--end article -->
+
+        <!--footer-->
+        <footer class="footer">
+            <div class="container">
+                <span class="footer__logo">ohmyfood</span>
+                <ul class="footer__list">
+                    <li class="footer__list-element">
+                        <a class="footer__link" href="#"><i class="footer__icon fas fa-utensils"></i>Proposer un
+                            restaurant</a>
+                    </li>
+                    <li class="footer__list-element">
+                        <a class="footer__link" href="#"><i class="footer__icon fas fa-hands-helping"></i>Devenir
+                            partenaire</a>
+                    </li>
+                    <li class="footer__list-element">
+                        <a class="footer__link" href="#">Mentions légales</a>
+                    </li>
+                    <li class="footer__list-element">
+                        <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+        <!--end footer-->
     </div>
 </body>
 
