--- a/public/html/palette.html
+++ b/public/html/palette.html
@@ -1,132 +1,186 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="shortcut icon" type="image/png" href="../img/logo/Favico.png" />
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
-            integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp"
-            crossorigin="anonymous" />
-        <title>OhMyFood</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="shortcut icon" type="image/png" href="../img/logo/Favico.png" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css"
+        integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous" />
+    <title>OhMyFood</title>
 </head>
+
 <body>
 
     <!--header-->
-   <header class="header">
-       <h1 class="header__h1">
-           <a class="header__arrow" href="../../index.html">
-               <span class="fas fa-arrow-left "></span>
-           </a>
-           ohmyfood
-       </h1>
-       <img class="header__img" src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-           alt="La palette du goût" />
-   </header>
-   <!--end header-->
+    <header class="header">
+        <h1 class="header__h1">
+            <a class="header__arrow" href="../../index.html">
+                <span class="fas fa-arrow-left "></span>
+            </a>
+            ohmyfood
+        </h1>
+        <img class="header__img" src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+            alt="La palette du goût" />
+    </header>
+    <!--end header-->
 
-   <!--menu-->
-   <section class="menu">
-       <h2 class="menu__h2">
-           La palette du goût
-           <div class="menu__like">
-               <i class="far fa-heart empty-heart">
-                   <i class="fas fa-heart full-heart"></i></i>
-           </div>
-       </h2>
+    <!--menu-->
+    <section class="menu">
+        <h2 class="menu__h2">
+            La palette du goût
+            <div class="menu__like">
+                <i class="far fa-heart empty-heart">
+                    <i class="fas fa-heart full-heart "></i></i>
+            </div>
+        </h2>
 
-       <div class="menu__submenu">
-           <h3 class="menu__submenu--h3">
-               ENTR&#201;ES
-           </h3>
-           <div class="menu__submenu__flat">
-               <h3>Fricassée d'escargot</h3>
-               <p>Au piment d'espelette</p>
-               <h3>25€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-           <div class="menu__submenu__flat">
-               <h3>Foie gras de canard mi-cuit</h3>
-               <p>Et ses copeaux de truffe noire</p>
-               <h3>35€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-           <div class="menu__submenu__flat">
-               <h3>Oeuf au flat</h3>
-               <p>Assaisonné à la truffe sur lit de caviar</p>
-               <h3>20€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-       </div>
-       <div class="menu__submenu">
-           <h3 class="menu__submenu--h3">
-               PLATS
-           </h3>
-           <div class="menu__submenu__flat">
-               <h3>Filet de boeuf aux herbes</h3>
-               <p>Accompagné de sa ribambelle de légumes</p>
-               <h3>40€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-           <div class="menu__submenu__flat">
-               <h3>Parmentier de queue de boeuf</h3>
-               <p>A la truffe noire sur sa purée de panais</p>
-               <h3>35€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-           <div class="menu__submenu__flat">
-               <h3>Filet de Turbot</h3>
-               <p>Aux agrumes</p>
-               <h3>44€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-       </div>
-       <div class="menu__submenu">
-           <h3 class="menu__submenu--h3">
-               DESSERTS
-           </h3>
-           <div class="menu__submenu__flat">
-               <h3>Paris-Brest</h3>
-               <p>Revisité</p>
-               <h3>18€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-           <div class="menu__submenu__flat">
-               <h3>Macaron au chocolat d'exeption</h3>
-               <p>Et glace à la vanille de Madagascar</p>
-               <h3>22€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-           <div class="menu__submenu__flat">
-               <h3>Mousse au chocolat</h3>
-               <p>Au piment d'espelette et à la truffe noire</p>
-               <h3>23€</h3>
-               <div class="menu__submenu__flat--validation">
-                   <span class="fa fa-check"></span>
-               </div>
-           </div>
-       </div>
-       <button class="menu__button">
-           Commander
-       </button>
-   </section>
+        <!--Entrée-->
+        <div class="menu__submenu">
+            <h3 class="menu__submenu--h3">
+                ENTR&#201;ES
+            </h3>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Fricassée d'escargot</h3>
+                    <p>Au piment d'espelette</p>
+                    <h3>25€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Foie gras de canard mi-cuit</h3>
+                    <p>Et ses copeaux de truffe noire</p>
+                    <h3>35€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Oeuf au plat</h3>
+                    <p>Assaisonné à la truffe sur lit de caviar</p>
+                    <h3>20€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+        </div>
 
+        <!--Plats-->
+        <div class="menu__submenu">
+            <h3 class="menu__submenu--h3">
+                PLATS
+            </h3>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Filet de boeuf aux herbes</h3>
+                    <p>Accompagné de sa ribambelle de légumes</p>
+                    <h3>40€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Parmentier de queue de boeuf</h3>
+                    <p>A la truffe noire sur sa purée de panais</p>
+                    <h3>35€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Filet de Turbot</h3>
+                    <p>Aux agrumes</p>
+                    <h3>44€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+        </div>
+        <!--end plats-->
+
+        <!--dessert-->
+        <div class="menu__submenu">
+            <h3 class="menu__submenu--h3">
+                DESSERTS
+            </h3>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Paris-Brest</h3>
+                    <p>Revisité</p>
+                    <h3>18€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Macaron au chocolat d'exeption</h3>
+                    <p>Et glace à la vanille de Madagascar</p>
+                    <h3>22€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+            <div class="menu__submenu__flat">
+                <div class="menu__submenu__flat--text">
+                    <h3>Mousse au chocolat</h3>
+                    <p>Au piment d'espelette et à la truffe noire</p>
+                    <h3>23€</h3>
+                </div>
+                <div class="validation">
+                    <span class="fas fa-check-circle check"></span>
+                </div>
+            </div>
+        </div>
+        <!--end dessert-->
+        <!--end menu-->
+
+        <button class="menu__button">
+            Commander
+        </button>
+
+    </section>
+
+
+    <!--footer-->
+    <footer class="footer">
+        <div class="container">
+            <span class="footer__logo">ohmyfood</span>
+            <ul class="footer__list">
+                <li class="footer__list-element">
+                    <a class="footer__link" href="#"><i class="footer__icon fas fa-utensils"></i>Proposer un
+                        restaurant</a>
+                </li>
+                <li class="footer__list-element">
+                    <a class="footer__link" href="#"><i class="footer__icon fas fa-hands-helping"></i>Devenir
+                        partenaire</a>
+                </li>
+                <li class="footer__list-element">
+                    <a class="footer__link" href="#">Mentions légales</a>
+                </li>
+                <li class="footer__list-element">
+                    <a class="footer__link" href="mailto:contact@ohmyfood.com">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </footer>
+    <!--end footer-->
 
 </body>
+
 </html>
