--- a/public/html/palette.html
+++ b/public/html/palette.html
@@ -41,7 +41,7 @@
             <h3 class="menu__submenu--h3">
                 ENTR&#201;ES
             </h3>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-1">
                 <div class="menu__submenu__flat--text">
                     <h3>Fricassée d'escargot</h3>
                     <p>Au piment d'espelette</p>
@@ -51,7 +51,7 @@
                     <span class="fas fa-check-circle check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-2">
                 <div class="menu__submenu__flat--text">
                     <h3>Foie gras de canard mi-cuit</h3>
                     <p>Et ses copeaux de truffe noire</p>
@@ -61,7 +61,7 @@
                     <span class="fas fa-check-circle check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-3">
                 <div class="menu__submenu__flat--text">
                     <h3>Oeuf au plat</h3>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
@@ -78,7 +78,7 @@
             <h3 class="menu__submenu--h3">
                 PLATS
             </h3>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-4">
                 <div class="menu__submenu__flat--text">
                     <h3>Filet de boeuf aux herbes</h3>
                     <p>Accompagné de sa ribambelle de légumes</p>
@@ -88,7 +88,7 @@
                     <span class="fas fa-check-circle check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-5">
                 <div class="menu__submenu__flat--text">
                     <h3>Parmentier de queue de boeuf</h3>
                     <p>A la truffe noire sur sa purée de panais</p>
@@ -98,7 +98,7 @@
                     <span class="fas fa-check-circle check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-6">
                 <div class="menu__submenu__flat--text">
                     <h3>Filet de Turbot</h3>
                     <p>Aux agrumes</p>
@@ -116,7 +116,7 @@
             <h3 class="menu__submenu--h3">
                 DESSERTS
             </h3>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-7">
                 <div class="menu__submenu__flat--text">
                     <h3>Paris-Brest</h3>
                     <p>Revisité</p>
@@ -126,7 +126,7 @@
                     <span class="fas fa-check-circle check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-8">
                 <div class="menu__submenu__flat--text">
                     <h3>Macaron au chocolat d'exeption</h3>
                     <p>Et glace à la vanille de Madagascar</p>
@@ -136,7 +136,7 @@
                     <span class="fas fa-check-circle check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat">
+            <div class="menu__submenu__flat delay-9">
                 <div class="menu__submenu__flat--text">
                     <h3>Mousse au chocolat</h3>
                     <p>Au piment d'espelette et à la truffe noire</p>
@@ -155,7 +155,6 @@
         </button>
 
     </section>
-
 
     <!--footer-->
     <footer class="footer">
