--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <!--end card 1-->
 
             <!--card 2-->
-            <a class="article_card" href="">
+            <a class="article_card" href="./public/html/note.html">
                 <figure class="article__figure">
                     <span class="article__figure--new">Nouveau</span>
                     <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
