:package:add menu francaise html

--- a/index.html
+++ b/index.html
@@ -107,12 +107,12 @@
             <!--end card 2-->
 
             <!--card 3-->
-            <a class="article_card" href="">
+            <a class="article_card" href="./public/html/francaise.html">
                 <figure class="article__figure">
                     <img class="article__figure__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="">
                     <figcaption class="article__figcaption">
-                        <h3 class="article__figcaption__h3">A la française</h3>
+                        <h3 class="article__figcaption__h3">&Agrave; la française</h3>
                         <p class="article__figcaption__p">Cité rouge</p>
                         <div class="article__figcaption__like">
                             <i class="far fa-heart empty-heart">
