--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             </div>
             <h2 class="header__h2">Réservez le menu qui vous convient</h2>
             <p class="header__p">Découvrez des restaurants d'exception, sélectionnées par nos soins</p>
-            <a class="header__btn" href="#restaurants">Explorer nos restaurants</a>
+            <button class="header__btn" >Explorer nos restaurants</button>
         </header>
         <!-- header end -->
 
