--- a/public/html/note.html
+++ b/public/html/note.html
@@ -21,8 +21,7 @@
             </a>
             ohmyfood
         </h1>
-        <img class="header__img" src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-            alt="La note enchantée" />
+        <img class="header__img" src="../img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="La note enchantée" />
     </header>
     <!--end header-->
 
