:bug:correction colour error of appearance of the menus

--- a/public/html/delice.html
+++ b/public/html/delice.html
@@ -80,7 +80,7 @@
             </h3>
             <div class="menu__submenu__flat delay-4">
                 <div class="menu__submenu__flat--text">
-                    <h3>Poulet rôti aux herbes de provence</h3>
+                    <h3 title="Poulet rôti aux herbes de provence">Poulet rôti aux herbes de provence</h3>
                     <p>Et sa crème de truffe</p>
                     <h3>40€</h3>
                 </div>
