:bug:typing error menu correction

--- a/public/html/palette.html
+++ b/public/html/palette.html
@@ -41,8 +41,8 @@
             <h3 class="menu__submenu--h3">
                 ENTR&#201;ES
             </h3>
-            <div class="menu__submenu__flat delay-1">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-1">
+                <div class="menu__submenu__dish--text">
                     <h3>Fricassée d'escargot</h3>
                     <p>Au piment d'espelette</p>
                     <h3>25€</h3>
@@ -51,8 +51,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-2">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-2">
+                <div class="menu__submenu__dish--text">
                     <h3>Foie gras de canard mi-cuit</h3>
                     <p>Et ses copeaux de truffe noire</p>
                     <h3>35€</h3>
@@ -61,8 +61,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-3">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-3">
+                <div class="menu__submenu__dish--text">
                     <h3>Oeuf au plat</h3>
                     <p>Assaisonné à la truffe sur lit de caviar</p>
                     <h3>20€</h3>
@@ -78,8 +78,8 @@
             <h3 class="menu__submenu--h3">
                 PLATS
             </h3>
-            <div class="menu__submenu__flat delay-4">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-4">
+                <div class="menu__submenu__dish--text">
                     <h3>Filet de boeuf aux herbes</h3>
                     <p>Accompagné de sa ribambelle de légumes</p>
                     <h3>40€</h3>
@@ -88,8 +88,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-5">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-5">
+                <div class="menu__submenu__dish--text">
                     <h3>Parmentier de queue de boeuf</h3>
                     <p>A la truffe noire sur sa purée de panais</p>
                     <h3>35€</h3>
@@ -98,8 +98,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-6">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-6">
+                <div class="menu__submenu__dish--text">
                     <h3>Filet de Turbot</h3>
                     <p>Aux agrumes</p>
                     <h3>44€</h3>
@@ -116,8 +116,8 @@
             <h3 class="menu__submenu--h3">
                 DESSERTS
             </h3>
-            <div class="menu__submenu__flat delay-7">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-7">
+                <div class="menu__submenu__dish--text">
                     <h3>Paris-Brest</h3>
                     <p>Revisité</p>
                     <h3>18€</h3>
@@ -126,8 +126,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-8">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-8">
+                <div class="menu__submenu__dish--text">
                     <h3>Macaron au chocolat d'exeption</h3>
                     <p>Et glace à la vanille de Madagascar</p>
                     <h3>22€</h3>
@@ -136,8 +136,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-9">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-9">
+                <div class="menu__submenu__dish--text">
                     <h3>Mousse au chocolat</h3>
                     <p>Au piment d'espelette et à la truffe noire</p>
                     <h3>23€</h3>
