--- a/public/html/delice.html
+++ b/public/html/delice.html
@@ -41,8 +41,8 @@
             <h3 class="menu__submenu--h3">
                 ENTR&#201;ES
             </h3>
-            <div class="menu__submenu__flat delay-1">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-1">
+                <div class="menu__submenu__dish--text">
                     <h3>Tartare de thon</h3>
                     <p>Assaisonné au yuzu</p>
                     <h3>25€</h3>
@@ -51,8 +51,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-2">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-2">
+                <div class="menu__submenu__dish--text">
                     <h3>Bouchée de homard croustillant</h3>
                     <p>Et sa farandole de petits légumes</p>
                     <h3>35€</h3>
@@ -61,8 +61,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-3">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-3">
+                <div class="menu__submenu__dish--text">
                     <h3>Velouté de cèpes</h3>
                     <p>Aux truffes</p>
                     <h3>20€</h3>
@@ -78,8 +78,8 @@
             <h3 class="menu__submenu--h3">
                 PLATS
             </h3>
-            <div class="menu__submenu__flat delay-4">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-4">
+                <div class="menu__submenu__dish--text">
                     <h3 title="Poulet rôti aux herbes de provence">Poulet rôti aux herbes de provence</h3>
                     <p>Et sa crème de truffe</p>
                     <h3>40€</h3>
@@ -88,8 +88,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-5">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-5">
+                <div class="menu__submenu__dish--text">
                     <h3>Langouste rôtie</h3>
                     <p>Et ses légumes de saison</p>
                     <h3>35€</h3>
@@ -98,8 +98,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-6">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-6">
+                <div class="menu__submenu__dish--text">
                     <h3>Côte de boeuf angus</h3>
                     <p>Et sa purée de panais</p>
                     <h3>44€</h3>
@@ -116,8 +116,8 @@
             <h3 class="menu__submenu--h3">
                 DESSERTS
             </h3>
-            <div class="menu__submenu__flat delay-7">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-7">
+                <div class="menu__submenu__dish--text">
                     <h3>Farandole de dessert</h3>
                     <p>Du chef</p>
                     <h3>18€</h3>
@@ -126,8 +126,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-8">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-8">
+                <div class="menu__submenu__dish--text">
                     <h3>Crème brulée</h3>
                     <p>Revisité</p>
                     <h3>22€</h3>
@@ -136,8 +136,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-9">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-9">
+                <div class="menu__submenu__dish--text">
                     <h3>Tiramisu</h3>
                     <p>&Agrave; la noisette</p>
                     <h3>23€</h3>
