--- a/public/html/note.html
+++ b/public/html/note.html
@@ -40,8 +40,8 @@
             <h3 class="menu__submenu--h3">
                 ENTR&#201;ES
             </h3>
-            <div class="menu__submenu__flat delay-1">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-1">
+                <div class="menu__submenu__dish--text">
                     <h3>Raviole de foie gras</h3>
                     <p>Accompagnés de leur crème à la truffe</p>
                     <h3>25€</h3>
@@ -50,8 +50,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-2">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-2">
+                <div class="menu__submenu__dish--text">
                     <h3>Caviar osciètre</h3>
                     <p>Sur blini à la farine de blé noir</p>
                     <h3>35€</h3>
@@ -60,8 +60,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-3">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-3">
+                <div class="menu__submenu__dish--text">
                     <h3>Homard et espuma de potiron</h3>
                     <p>Mariné aux zests d'orange</p>
                     <h3>20€</h3>
@@ -70,8 +70,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-4">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-4">
+                <div class="menu__submenu__dish--text">
                     <h3>Foie gras de canard cuit entier</h3>
                     <p>Confiture de figue et pain toasté</p>
                     <h3>35€</h3>
@@ -87,8 +87,8 @@
             <h3 class="menu__submenu--h3">
                 PLATS
             </h3>
-            <div class="menu__submenu__flat delay-5">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-5">
+                <div class="menu__submenu__dish--text">
                     <h3>Noix de coquille Saint-Jacques</h3>
                     <p>Sur lit de purée de céleri-rave</p>
                     <h3>40€</h3>
@@ -97,8 +97,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-6">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-6">
+                <div class="menu__submenu__dish--text">
                     <h3>Langoustine poêlée</h3>
                     <p>Purée de patate douce</p>
                     <h3>35€</h3>
@@ -107,8 +107,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-7">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-7">
+                <div class="menu__submenu__dish--text">
                     <h3>Mijoté de queue de boeuf</h3>
                     <p>Et riz sauvage aux zets de citron</p>
                     <h3>44€</h3>
@@ -125,8 +125,8 @@
             <h3 class="menu__submenu--h3">
                 DESSERTS
             </h3>
-            <div class="menu__submenu__flat delay-8">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-8">
+                <div class="menu__submenu__dish--text">
                     <h3>Macaron noisette et chocolat</h3>
                     <p>Glace au caramel brun et sel de Guérande</p>
                     <h3>18€</h3>
@@ -135,8 +135,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-9">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-9">
+                <div class="menu__submenu__dish--text">
                     <h3>Baba au rhum revisité</h3>
                     <p>Avec son coulis de citron</p>
                     <h3>22€</h3>
@@ -145,8 +145,8 @@
                     <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
-            <div class="menu__submenu__flat delay-10">
-                <div class="menu__submenu__flat--text">
+            <div class="menu__submenu__dish delay-10">
+                <div class="menu__submenu__dish--text">
                     <h3>Tarte au citron meringuée</h3>
                     <p>Destructurée</p>
                     <h3>23€</h3>
