:bug:correction of typing error of meta description and text of picture

--- a/public/html/delice.html
+++ b/public/html/delice.html
@@ -22,7 +22,7 @@
             ohmyfood
         </h1>
         <img class="header__img" src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="La palette du goût" />
+            alt="illustration du restaurant le délice des sens" />
     </header>
     <!--end header-->
 
