--- a/public/html/palette.html
+++ b/public/html/palette.html
@@ -22,7 +22,7 @@
             ohmyfood
         </h1>
         <img class="header__img" src="../img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-            alt="La palette du goût" />
+            alt="illustratyion du restaurant la palette du goût" />
     </header>
     <!--end header-->
 
