--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Les meilleurs restaurants autour de vous en un clic. Composez votre menu personnalisé rapidement. C'est facile, venez essayer.">
     <link rel="stylesheet" href="public/css/style.css">
     <link rel="shortcut icon" type="image/png" href="./public/img/logo/Favico.png" />
     <script src="https://kit.fontawesome.com/fd986726cd.js" crossorigin="anonymous"></script>
@@ -42,21 +43,21 @@
                     <span class="nav__ul--li--figure">
                         1
                     </span>
-                    <span class="fas fa-mobile-alt logo"></span>
+                    <span class="fas fa-mobile-alt "></span>
                     Choisissez un restaurant
                 </li>
                 <li class="nav__ul--li">
                     <span class="nav__ul--li--figure">
                         2
                     </span>
-                    <span class="fas fa-list-ul logo"></span>
+                    <span class="fas fa-list-ul "></span>
                     Composez votre menu
                 </li>
                 <li class="nav__ul--li">
                     <span class="nav__ul--li--figure">
                         3
                     </span>
-                    <span class="fas fa-store logo"></span>
+                    <span class="fas fa-store "></span>
                     Dégustez au restaurant
                 </li>
             </ul>
@@ -75,10 +76,10 @@
                 <figure class="article__figure">
                     <span class="article__figure--new">Nouveau</span>
                     <img class="article__figure__img"
-                        src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="">
+                        src="public/img/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="illustration du restaurant la palette du goût">
                     <figcaption class="article__figcaption">
                         <h3 class="article__figcaption__h3">La palette du goût</h3>
-                        <p class="article__figcaption__p">Ménilmontant</p>
+                        <p>Ménilmontant</p>
                         <div class="article__figcaption__like">
                             <i class="far fa-heart empty-heart">
                                 <i class="fas fa-heart full-heart"></i></i>
@@ -92,10 +93,10 @@
             <a class="article__card" href="./public/html/note.html">
                 <figure class="article__figure">
                     <span class="article__figure--new">Nouveau</span>
-                    <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
+                    <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="illustration du restaurant la note enchantée">
                     <figcaption class="article__figcaption">
                         <h3 class="article__figcaption__h3">La note enchantée</h3>
-                        <p class="article__figcaption__p">Charonne</p>
+                        <p>Charonne</p>
                         <div class="article__figcaption__like">
                             <i class="far fa-heart empty-heart">
                                 <i class="fas fa-heart full-heart"></i></i>
@@ -109,10 +110,10 @@
             <a class="article__card" href="./public/html/francaise.html">
                 <figure class="article__figure">
                     <img class="article__figure__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                        alt="">
+                        alt="illustration du restaurant à la française">
                     <figcaption class="article__figcaption">
                         <h3 class="article__figcaption__h3">&Agrave; la française</h3>
-                        <p class="article__figcaption__p">Cité rouge</p>
+                        <p>Cité rouge</p>
                         <div class="article__figcaption__like">
                             <i class="far fa-heart empty-heart">
                                 <i class="fas fa-heart full-heart"></i></i>
@@ -126,10 +127,10 @@
             <a class="article__card" href="./public/html/delice.html">
                 <figure class="article__figure">
                     <img class="article__figure__img"
-                        src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
+                        src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="illustration du restaurant le délice des sens">
                     <figcaption class="article__figcaption">
                         <h3 class="article__figcaption__h3">Le délice des sens</h3>
-                        <p class="article__figcaption__p">Folie-Méricourt</p>
+                        <p>Folie-Méricourt</p>
                         <div class="article__figcaption__like">
                             <i class="far fa-heart empty-heart">
                                 <i class="fas fa-heart full-heart"></i></i>
