:bug:correction W3C error

--- a/public/html/palette.html
+++ b/public/html/palette.html
@@ -28,13 +28,13 @@
 
     <!--menu-->
     <section class="menu">
-        <h2 class="menu__h2">
+        <div class="menu__h2">
             La palette du goût
             <div class="menu__like">
                 <i class="far fa-heart empty-heart">
                     <i class="fas fa-heart full-heart "></i></i>
             </div>
-        </h2>
+        </div>
 
         <!--Entrée-->
         <div class="menu__submenu">
